bookmarks: Fix problem causing bookmarks to disappear after an import

This fixes some bugs mainly related to importing bookmarks from Firefox.
In ephy_bookmarks_manager_add_bookmarks(), g_sequence_lookup()
was called on an unsorted sequence, which caused the function
to fail and not add bookmarks to the manager. Besides that, the compare
function used for various GSequence operations did not treat the
case where the time_added was equal for both bookmarks.

https://bugzilla.gnome.org/show_bug.cgi?id=780564